[tool.poetry]
name = "volttron-utils"
version = "0.1.1"
description = ""
authors = ["C. Allwardt <craig.allwardt@pnnl.gov>"]
license = "Apache 2"
packages = [
    { include = "volttron" }
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
gevent = "20.6.1"
greenlet = "0.4.16"
watchdog-gevent = "^0.1.1"
zmq = "^0.0.0"
dateutils = ">=0.6,<0.7"
tzlocal = ">=2,<3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/'''
